--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity" android:id="@+id/constraint_layout">
 
     <TextView
             android:layout_width="0dp"
@@ -21,11 +21,11 @@
             android:id="@+id/box_one_text"/>
     <TextView
             android:text="@string/box_two"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
             android:id="@+id/box_two_text" style="@style/WhiteBox" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintDimensionRatio="w,1:1"/>
+            app:layout_constraintTop_toBottomOf="@+id/box_one_text"/>
     <TextView
             android:text="@string/box_three"
             android:layout_width="0dp"
@@ -53,5 +53,47 @@
             app:layout_constraintTop_toBottomOf="@+id/box_four_text"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
             app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"/>
+    <TextView
+            android:text="@string/how_to_play"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/label_text" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/info_text"
+            android:textSize="24sp"/>
+    <TextView
+            android:text="@string/tap_the_screen_and_bottom"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/info_text" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/box_two_text" app:layout_constraintStart_toEndOf="@+id/label_text"
+            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.100000024"/>
+    <Button
+            android:text="@string/button_red"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_red"
+            app:layout_constraintBaseline_toBaselineOf="@+id/button_yellow"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/button_yellow" android:layout_marginStart="16dp"/>
+    <Button
+            android:text="@string/button_yellow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_yellow"
+            app:layout_constraintStart_toEndOf="@+id/button_red" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/button_green" android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/label_text" app:layout_constraintVertical_bias="1.0"/>
+    <Button
+            android:text="@string/button_green"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_green"
+            app:layout_constraintBaseline_toBaselineOf="@+id/button_yellow"
+            app:layout_constraintStart_toEndOf="@+id/button_yellow" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
