--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="my_red">#D81B37</color>
+    <color name="my_yellow">#D8B91B</color>
+    <color name="my_green">#21D81B</color>
 </resources>
